code: oscore: add code

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,15 @@
 [submodule "ndn/RIOT"]
 	path = ndn/RIOT
 	url = https://github.com/cgundogan/RIOT.git
-[submodule "icn-oscore/RIOT"]
-	path = icn-detoscore/RIOT
-	url = https://github.com/cgundogan/RIOT.git
 [submodule "icn-detoscore/liboscore"]
 	path = icn-detoscore/liboscore
 	url = https://gitlab.com/oscore/liboscore.git
+[submodule "icn-oscore/liboscore"]
+	path = icn-oscore/liboscore
+	url = https://gitlab.com/cgundogan/liboscore.git
+[submodule "icn-oscore/RIOT"]
+	path = icn-oscore/RIOT
+	url = https://github.com/cgundogan/RIOT.git
+[submodule "icn-detoscore/RIOT"]
+	path = icn-detoscore/RIOT
+	url = https://github.com/cgundogan/RIOT.git
